fix  grade-bar margin on mobile

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1200,6 +1200,7 @@ form.form-offer {
   border-radius: 5px;
   position: relative;
   @extend .mt-3;
+  @extend .mb-4;
 
   .grade-cursor {
     position: absolute;
